Change timer size and fix reset timer

--- a/cube.html
+++ b/cube.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        .text--timer{
+            font-size: 30px;
+        }
+    </style>
     <meta charset="utf-8">    
     <title>Rubik cube</title>
     <link rel="stylesheet" href="./cube.css">
