--- a/cube.html
+++ b/cube.html
@@ -2,11 +2,6 @@
 <html lang="en">
 
 <head>
-    <style>
-        .text--timer{
-            font-size: 30px;
-        }
-    </style>
     <meta charset="utf-8">    
     <title>Rubik cube</title>
     <link rel="stylesheet" href="./cube.css">
@@ -14,12 +9,11 @@
 </head>
 
 <body>
-    <div class="ui">
-
-        <div class="ui__background"></div>
-
+    <center>
         <div class="ui__game"></div>
-
+    </center>
+    
+    <div class="ui">
         <div class="ui__texts">
             <div class="text text--timer">
                 0:00
@@ -29,7 +23,6 @@
             <button id="scrambleButton">Scramble</button>
             <button id="resetButton">Reset</button>
         </div>
-
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js'></script>
     <script src="./cube.js"></script>
