--- a/cube.html
+++ b/cube.html
@@ -5,20 +5,22 @@
     <meta charset="utf-8">    
     <title>Rubik cube</title>
     <link rel="stylesheet" href="./cube.css">
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/seven-segment">
+
 
 </head>
 
 <body>
-    <center>
-        <div class="ui__game"></div>
-    </center>
-    
-    <div class="ui">
-        <div class="ui__texts">
-            <div class="text text--timer">
-                0:00
-            </div>
+    <div class="ui__texts">
+        <img src='Main-menu-page/Asset/timer.png'>
+
+        <div class="text--timer">
+            0:00
         </div>
+    </div>
+    <div class="game"></div>
+
+    <div class="ui">
         <div class="ui__buttons">
             <button id="scrambleButton">Scramble</button>
             <button id="resetButton">Reset</button>
