Added performance screen(not done)

--- a/cube.html
+++ b/cube.html
@@ -18,6 +18,20 @@
             0:00
         </div>
     </div>
+    <div class="performance__screen"> 
+            <div class="bbox"><div class = "performance--text">
+                Your performance
+            </div></div>
+            <div class = "performance--info">
+                <pre>
+
+Finished time:
+          
+
+Personal record: 
+                </pre>
+            </div>
+    </div>
     <div class="game"></div>
 
     <div class="ui">
