--- a/cube.html
+++ b/cube.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./cube.css">
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/seven-segment">
 
-
 </head>
 
 <body>
+    <div class="blockingscreen"></div>
+    <div class="blockingscreen2"></div>
+    <div class="blockinglogo">
+        <img src="Main-menu-page/Asset/LOGO.png">
+    </div>  
     <div class="ui__texts">
         <img src='Main-menu-page/Asset/timer.png'>
-
         <div class="text--timer">
             0:00
         </div>
@@ -41,6 +44,7 @@ Personal record:
         </div>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="./cube.js"></script>
 
 </body>
