change reset scramble image

--- a/cube.html
+++ b/cube.html
@@ -13,10 +13,10 @@
     <div class="blockingscreen"></div>
     <div class="blockingscreen2"></div>
     <div class="blockinglogo">
-        <img src="Main-menu-page/Asset/LOGO.png">
+        <img src="Asset/LOGO.png">
     </div>  
     <div class="ui__texts">
-        <img src='Main-menu-page/Asset/timer.png'>
+        <img src='Asset/timer.png'>
         <div class="text--timer">
             0:00
         </div>
@@ -37,11 +37,13 @@ Personal record:
     </div>
     <div class="game"></div>
 
-    <div class="ui">
-        <div class="ui__buttons">
-            <button id="scrambleButton">Scramble</button>
-            <button id="resetButton">Reset</button>
-        </div>
+    <div class="ui__buttons">
+        <button id="scrambleButton">
+            <img src="Asset/SCRAMBLE.png" alt="scrambleButton">
+        </button>
+        <button id="resetButton">
+            <img src="Asset/Reset.png" alt="resetButton">
+        </button>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
