--- a/Main-menu-page/main.html
+++ b/Main-menu-page/main.html
@@ -142,7 +142,7 @@
 <body>
     <div class="menu">
         <div class="logo">
-            <img src="/Asset/logo.png" alt="LOGO">
+            <img src="/Asset/LOGO.png" alt="LOGO">
         </div>
         
         <div class="left-buttons">
