added handgesturebutton no js yet

--- a/cube.html
+++ b/cube.html
@@ -15,6 +15,11 @@
     <div class="blockinglogo">
         <img src="Asset/LOGO.png">
     </div>  
+    <div class = "handgesture_switch">
+        <pre>Handgesture mode [Experimental]</pre>
+        <input type="checkbox" id="handgesture_switch">
+        <span class = "slider"></span>
+    </div>
     <div class="ui__texts">
         <img src='Asset/timer.png'>
         <div class="text--timer">
@@ -26,12 +31,12 @@
                 Your performance
             </div></div>
             <div class = "performance--info">
-                <pre>
-
+                <pre>       
 Finished time:
           
 
 Personal record: 
+
                 </pre>
             </div>
     </div>
