added camera frontend

--- a/cube.html
+++ b/cube.html
@@ -20,6 +20,9 @@
         <input type="checkbox" id="handgesture_switch">
         <span class = "slider"></span>
     </div>
+    <div class = "usercam">
+        <video id="usercam" width="320" height="240" autoplay></video>
+    </div>
     <div class="ui__texts">
         <img src='Asset/timer.png'>
         <div class="text--timer">
