--- a/cube.html
+++ b/cube.html
@@ -30,18 +30,21 @@
         </div>
     </div>
     <div class="performance__screen"> 
-            <div class="bbox"><div class = "performance--text">
-                Your performance
-            </div></div>
-            <div class = "performance--info">
-                <pre>       
-Finished time:
-          
-
-Personal record: 
-
-                </pre>
+        <div class="bbox">
+            <div class = "performance--text">
+            Your performance
             </div>
+        </div>
+        <div class = "performance--info">
+            
+            <div id = "text--finished">
+                Finished in 0:00
+            </div>
+            <div id = "text--best">
+                Best time: 0:00
+            </div>
+
+        </div>
     </div>
     <div class="game"></div>
 
