--- a/Main-menu-page/main.html
+++ b/Main-menu-page/main.html
@@ -6,7 +6,7 @@
   <title>Game Menu</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
   integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" 
-  referrerpolicy="no-referrer" />"
+  referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="main.css"/>
 </head>
@@ -16,12 +16,12 @@
 
   <!-- Full-screen logo -->
 <div id="fullScreenLogo" class="full-screen-logo">
-  <img src="/Asset/rubik_boss_3x3.png" alt="Full-screen Logo" />
+  <img src="/Asset/rubik_boss_3x3.png" alt="Full-screen Logo"/>
 </div>
 
   <div class="video-container">
     <video autoplay loop muted playsinline>
-        <source src="/Asset/Background.mp4" type="video/mp4">
+        <source src="/Asset/Background2.mp4" type="video/mp4">
     </video>
 </div>
 </div>
@@ -33,6 +33,8 @@
       <h1>PLAY</h1>
       <button onclick="startGame('2x2')">2x2</button>
       <button onclick="startGame('3x3')">3x3</button>
+
+      
     </div>
     <div class="bottom-buttons">
       <button onclick="toggleStartMenu('Settings')"><i class="fa-solid fa-gear"></i>  Setting</button>
