--- a/Main-menu-page/main.html
+++ b/Main-menu-page/main.html
@@ -16,18 +16,18 @@
 
   <!-- Full-screen logo -->
 <div id="fullScreenLogo" class="full-screen-logo">
-  <img src="/Asset/rubik_boss_3x3.png" alt="Full-screen Logo"/>
+  <img src="../Asset/rubik_boss_3x3.png" alt="Full-screen Logo"/>
 </div>
 
   <div class="video-container">
     <video autoplay loop muted playsinline>
-        <source src="/Asset/Background2.mp4" type="video/mp4">
+        <source src="../Asset/Background2.mp4" type="video/mp4">
     </video>
 </div>
 </div>
   <div class="menu">
     <div class="logo">
-      <img src="/Asset/LOGO.png" alt="LOGO" />
+      <img src="../Asset/LOGO.png" alt="LOGO" />
     </div>
     <div class="left-buttons">
       <h1>PLAY</h1>
